--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
             </header>
             <div class="mn-slide-main">
                 <ul>
-                    <li><a id="active" href="">Home</a></li>
-                    <li><a href="">About</a></li>
+                    <li><a id="active" href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="">Gallery</a></li>
                     <li><a href="">Blog</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <footer class="slide-bottom">
@@ -100,21 +100,57 @@
                 <div><p class="menu-p">Copyright ©2025 All rights reserved | This template is made with love by <a class="menu-p-a" target="_blank" href="https://colorlib.com">Colorlib</a></p></div>
             </div>
     </header>
+    <!--Main IMGS-->
     <section class="flex-img">
         <div class="imgs" id="img1">
-
+            <div class="img-extra">
+                <button class="img-tag">People</button>
+                <h2 class="img-text">69 Flavio Burg Suite</h2>
+                <div class="div-author">
+                    <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+                </div>
+            </div>
         </div>
         <div class="imgs" id="img2">
-
+            <div class="img-extra">
+                <button class="img-tag">People</button>
+                <h2 class="img-text">69 Flavio Burg Suite</h2>
+                <div class="div-author">
+                    <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+                </div>
+            </div>
         </div>
         <div class="imgs" id="img3">
-
+            <div class="img-extra">
+                <button class="img-tag">People</button>
+                <h2 class="img-text">69 Flavio Burg Suite</h2>
+                <div class="div-author">
+                    <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+                </div>
+            </div>
         </div>
         <div class="imgs" id="img4">
-            
+            <div class="img-extra">
+                <button class="img-tag">People</button>
+                <h2 class="img-text">69 Flavio Burg Suite</h2>
+                <div class="div-author">
+                    <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+                </div>
+            </div>
         </div>
         <div class="imgs" id="img5">
-
+            <div class="img-extra">
+                <div class="img-tag">People</div>
+                <h2 class="img-text">69 Flavio Burg Suite</h2>
+                <div class="div-author">
+                    <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+                </div>
+            </div>
         </div>
     </section>
 
