--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tulen | Photography HTML Template</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="gallery.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -66,9 +66,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a id="active" href="gallery.html">Gallery</a></li>
                     <li><a href="">Blog</a></li>
-                    <li><a id="active" href="contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <footer class="slide-bottom">
@@ -100,30 +100,30 @@
                 <div><p class="menu-p">Copyright ©2025 All rights reserved | This template is made with love by <a class="menu-p-a" target="_blank" href="https://colorlib.com">Colorlib</a></p></div>
             </div>
     </header>
-    <section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12089.038378017278!2d-73.8845836!3d40.7563148!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25fa191b4692b%3A0xe573e64fb17e324a!2sJackson%20Heights%2C%20Queens%2C%20NY%2C%20EUA!5e0!3m2!1spt-BR!2sbr!4v1750882451446!5m2!1spt-BR!2sbr" width="100%" height="100%" style="z-index: -1; border: none; height: 99.3vh; opacity: 1;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <div class="contact">
-            <div class="contact-item">
-                <svg class="contact-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  viewBox="0 0 17 17">
-                    <path d="M8.5 0.5c-3.032 0-5.5 2.467-5.5 5.5 0 4.373 4.913 10.086 5.122 10.328l0.378 0.435 0.378-0.436c0.209-0.241 5.122-5.954 5.122-10.327 0-3.033-2.468-5.5-5.5-5.5zM8.5 15.215c-1.146-1.424-4.5-5.879-4.5-9.215 0-2.481 2.019-4.5 4.5-4.5s4.5 2.019 4.5 4.5c0 3.333-3.354 7.791-4.5 9.215zM8.5 3.139c-1.654 0-3 1.346-3 3s1.346 3 3 3 3-1.346 3-3-1.346-3-3-3zM8.5 8.139c-1.103 0-2-0.897-2-2s0.897-2 2-2 2 0.897 2 2-0.897 2-2 2z" />
-                </svg>
-                <p>60-49 Road 11378 <br> New York </p>
-            </div>
-            <div class="contact-item">
-                <svg class="contact-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  viewBox="0 0 17 17">
-                    <path d="M0 2v13h17v-13h-17zM8.494 9.817l-6.896-6.817h13.82l-6.924 6.817zM5.755 8.516l-4.755 4.682v-9.383l4.755 4.701zM6.466 9.219l2.026 2.003 1.996-1.966 4.8 4.744h-13.677l4.855-4.781zM11.201 8.555l4.799-4.725v9.467l-4.799-4.742z" />
-                </svg>
-                <p><span>Phone: </span> +65 11.188.888</p>
-                <p><span>Mail: </span> colorlib@gmail.com</p>
-            </div>
-            <div class="contact-item">
-                <svg class="contact-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  viewBox="0 0 17 17">
-                    <path d="M9 2.025v-1.025h1.5v-1h-4v1h1.5v1.025c-3.902 0.26-7 3.508-7 7.475 0 4.136 3.364 7.5 7.5 7.5s7.5-3.364 7.5-7.5c0-3.967-3.098-7.215-7-7.475zM8.5 16c-3.584 0-6.5-2.916-6.5-6.5s2.916-6.5 6.5-6.5 6.5 2.916 6.5 6.5-2.916 6.5-6.5 6.5zM9 9h4v1h-5v-4h1v3z" />
-                </svg>
-                <p><span>Week Days: </span> 10:00 - 22:00</p>
-                <p><span>Sunday: </span> Close</p>
-            </div>
-        </div>
+
+    <!--Top Bar-->
+    <section class="top-bar">
+    <h4 class="bar-tittle">Gallery</h4>
+    <ul class="bar-filter">
+        <input type="radio" name="btn-filter" id="filter1" checked> 
+        <li class="filter">All</li>
+        <input type="radio" name="btn-filter" id="filter2"> 
+        <li class="filter">Featured</li>
+        <input type="radio" name="btn-filter" id="filter3"> 
+        <li class="filter">People</li>
+        <input type="radio" name="btn-filter" id="filter4"> 
+        <li class="filter">Nature</li>
+        <input type="radio" name="btn-filter" id="filter5"> 
+        <li class="filter">Animal</li>
+        <input type="radio" name="btn-filter" id="filter6"> 
+        <li class="filter">Travel</li>
+    </ul>
     </section>
+
+    <!--Gallery-->
+    <section class="gallery">
+
+    </section>
+    
 </body>
 </html>
