--- a/gallery.html
+++ b/gallery.html
@@ -100,7 +100,7 @@
                 <div><p class="menu-p">Copyright ©2025 All rights reserved | This template is made with love by <a class="menu-p-a" target="_blank" href="https://colorlib.com">Colorlib</a></p></div>
             </div>
     </header>
-
+    <section>
     <!--Top Bar-->
     <section class="top-bar">
     <h4 class="bar-tittle">Gallery</h4>
@@ -122,8 +122,108 @@
 
     <!--Gallery-->
     <section class="gallery">
-
+        <div class="gallery-itembig" id="gallery1">
+            <a href="" class="aft">
+                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/1.jpg.webp" alt="">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+        </div>
+        <div class="gallery-item" id="gallery2">
+            <a href="" class="aft">
+                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/2.jpg.webp" alt="">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+        </div>
+        <div class="gallery-item" id="gallery3">
+            <a href="" class="aft">
+                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/3.jpg.webp" alt="">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+        </div>
+        <div class="gallery-item" id="gallery4">
+            <a href="" class="aft">
+                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/4.jpg.webp" alt="">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+        </div>
+        <div class="gallery-item" id="gallery5">
+            <a href="" class="aft">
+                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/5.jpg.webp" alt="">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+        </div>
+        <div class="gallery-itembig" id="gallery6">
+            <a href="" class="aft">
+                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/6.jpg.webp" alt="">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+        </div>
+        <div class="gallery-item" id="gallery7">
+            <a href="" class="aft">
+                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/7.jpg.webp" alt="">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+        </div>
+        <div class="gallery-item" id="gallery9">
+            <a href="" class="aft">
+                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/9.jpg.webp" alt="">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+        </div>
+        <div class="gallery-item" id="gallery10">
+            <a href="" class="aft">
+                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/10.jpg.webp" alt="">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+        </div>
+        <div class="gallery-item" id="gallery11">
+            <a href="" class="aft">
+                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/11.jpg.webp" alt="">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+        </div>
+        <div class="gallery-item" id="gallery8">
+            <a href="" class="aft">
+                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/8.jpg.webp" alt="img8">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+            </div>
+        </div>
     </section>
     
+    </section>
 </body>
 </html>
