--- a/gallery.html
+++ b/gallery.html
@@ -122,105 +122,105 @@
 
     <!--Gallery-->
     <section class="gallery">
-        <div class="gallery-itembig" id="gallery1">
+        <div class="gallery-itembig" >
             <a href="" class="aft">
-                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/1.jpg.webp" alt="">
+                <img id="gallery1" src="https://preview.colorlib.com/theme/tulen/img/gallery/1.jpg.webp" alt="">
             </a>
             <div class="author">
                 <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
                     <h4 class="img-author">Arthur Rose</h4>
             </div>
         </div>
-        <div class="gallery-item" id="gallery2">
+        <div class="gallery-item">
             <a href="" class="aft">
-                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/2.jpg.webp" alt="">
+                <img id="gallery2" src="https://preview.colorlib.com/theme/tulen/img/gallery/2.jpg.webp" alt="">
             </a>
             <div class="author">
                 <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
                     <h4 class="img-author">Arthur Rose</h4>
             </div>
         </div>
-        <div class="gallery-item" id="gallery3">
+        <div class="gallery-item">
             <a href="" class="aft">
-                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/3.jpg.webp" alt="">
+                <img id="gallery3" src="https://preview.colorlib.com/theme/tulen/img/gallery/3.jpg.webp" alt="">
             </a>
             <div class="author">
                 <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
                     <h4 class="img-author">Arthur Rose</h4>
             </div>
         </div>
-        <div class="gallery-item" id="gallery4">
+        <div class="gallery-item">
             <a href="" class="aft">
-                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/4.jpg.webp" alt="">
+                <img id="gallery4" src="https://preview.colorlib.com/theme/tulen/img/gallery/4.jpg.webp" alt="">
             </a>
             <div class="author">
                 <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
                     <h4 class="img-author">Arthur Rose</h4>
             </div>
         </div>
-        <div class="gallery-item" id="gallery5">
+        <div class="gallery-item">
             <a href="" class="aft">
-                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/5.jpg.webp" alt="">
+                <img id="gallery5" src="https://preview.colorlib.com/theme/tulen/img/gallery/5.jpg.webp" alt="">
             </a>
             <div class="author">
                 <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
                     <h4 class="img-author">Arthur Rose</h4>
             </div>
         </div>
-        <div class="gallery-itembig" id="gallery6">
+        <div class="gallery-itembig">
             <a href="" class="aft">
-                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/6.jpg.webp" alt="">
+                <img id="gallery6" src="https://preview.colorlib.com/theme/tulen/img/gallery/6.jpg.webp" alt="">
             </a>
             <div class="author">
                 <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
                     <h4 class="img-author">Arthur Rose</h4>
             </div>
         </div>
-        <div class="gallery-item" id="gallery7">
+        <div class="gallery-item">
             <a href="" class="aft">
-                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/7.jpg.webp" alt="">
+                <img id="gallery7" src="https://preview.colorlib.com/theme/tulen/img/gallery/7.jpg.webp" alt="">
             </a>
             <div class="author">
                 <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
                     <h4 class="img-author">Arthur Rose</h4>
             </div>
         </div>
-        <div class="gallery-item" id="gallery9">
+         <div class="gallery-item">
             <a href="" class="aft">
-                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/9.jpg.webp" alt="">
+                <img id="gallery8" src="https://preview.colorlib.com/theme/tulen/img/gallery/8.jpg.webp" alt="img8">
+            </a>
+            <div class="author">
+                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
+                    <h4 class="img-author">Arthur Rose</h4>
+            </div>
+            </div>
+        <div class="gallery-item">
+            <a href="" class="aft">
+                <img id="gallery9" src="https://preview.colorlib.com/theme/tulen/img/gallery/9.jpg.webp" alt="">
             </a>
             <div class="author">
                 <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
                     <h4 class="img-author">Arthur Rose</h4>
             </div>
         </div>
-        <div class="gallery-item" id="gallery10">
+        <div class="gallery-item">
             <a href="" class="aft">
-                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/10.jpg.webp" alt="">
+                <img id="gallery10" src="https://preview.colorlib.com/theme/tulen/img/gallery/10.jpg.webp" alt="">
             </a>
             <div class="author">
                 <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
                     <h4 class="img-author">Arthur Rose</h4>
             </div>
         </div>
-        <div class="gallery-item" id="gallery11">
+        <div class="gallery-item">
             <a href="" class="aft">
-                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/11.jpg.webp" alt="">
+                <img id="gallery11" src="https://preview.colorlib.com/theme/tulen/img/gallery/11.jpg.webp" alt="">
             </a>
             <div class="author">
                 <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
                     <h4 class="img-author">Arthur Rose</h4>
             </div>
         </div>
-        <div class="gallery-item" id="gallery8">
-            <a href="" class="aft">
-                <img src="https://preview.colorlib.com/theme/tulen/img/gallery/8.jpg.webp" alt="img8">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-            </div>
         </div>
     </section>
     
