Added new blog page

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tulen | Photography HTML Template</title>
-    <link rel="stylesheet" href="gallery.css">
+    <link rel="stylesheet" href="blog.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -66,8 +66,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a id="active" href="gallery.html">Gallery</a></li>
-                    <li><a href="">Blog</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a id="active" href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -100,134 +100,12 @@
                 <div><p class="menu-p">Copyright ©2025 All rights reserved | This template is made with love by <a class="menu-p-a" target="_blank" href="https://colorlib.com">Colorlib</a></p></div>
             </div>
     </header>
-    <section>
-    <!--Top Bar-->
-    <section class="top-bar">
-    <h4 class="bar-tittle">Gallery</h4>
-    <ul class="bar-filter">
-        <input type="radio" name="btn-filter" id="filter1" checked> 
-        <li class="filter">All</li>
-        <input type="radio" name="btn-filter" id="filter2"> 
-        <li class="filter">Featured</li>
-        <input type="radio" name="btn-filter" id="filter3"> 
-        <li class="filter">People</li>
-        <input type="radio" name="btn-filter" id="filter4"> 
-        <li class="filter">Nature</li>
-        <input type="radio" name="btn-filter" id="filter5"> 
-        <li class="filter">Animal</li>
-        <input type="radio" name="btn-filter" id="filter6"> 
-        <li class="filter">Travel</li>
-    </ul>
-    </section>
-
-    <!--Gallery-->
-    <section class="gallery">
-        <div class="gallery-itembig" >
-            <a href="" class="aft">
-                <img id="gallery1" src="https://preview.colorlib.com/theme/tulen/img/gallery/1.jpg.webp" alt="">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-        </div>
-        <div class="gal-flex">
-        <div class="gallery-item">
-            <a href="" class="aft">
-                <img id="gallery2" src="https://preview.colorlib.com/theme/tulen/img/gallery/2.jpg.webp" alt="">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-        </div>
-        <div class="gallery-item">
-            <a href="" class="aft">
-                <img id="gallery3" src="https://preview.colorlib.com/theme/tulen/img/gallery/3.jpg.webp" alt="">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-        </div>
-        </div>
-        <div class="gallery-item">
-            <a href="" class="aft">
-                <img id="gallery4" src="https://preview.colorlib.com/theme/tulen/img/gallery/4.jpg.webp" alt="">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-        </div>
-        <div class="gallery-itembig">
-            <a href="" class="aft">
-                <img id="gallery5" src="https://preview.colorlib.com/theme/tulen/img/gallery/5.jpg.webp" alt="">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-        </div>
-        <div class="gallery-itembig">
-            <a href="" class="aft">
-                <img id="gallery6" src="https://preview.colorlib.com/theme/tulen/img/gallery/6.jpg.webp" alt="">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-        </div>
-        <div class="gallery-item">
-            <a href="" class="aft">
-                <img id="gallery7" src="https://preview.colorlib.com/theme/tulen/img/gallery/7.jpg.webp" alt="">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-        </div>
-        <div class="gal-flex">
-         <div class="gallery-item" id="gal8">
-            <a href="" class="aft">
-                <img id="gallery8" src="https://preview.colorlib.com/theme/tulen/img/gallery/8.jpg.webp" alt="img8">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-            </div>
-        <div class="gallery-item">
-            <a href="" class="aft">
-                <img id="gallery9" src="https://preview.colorlib.com/theme/tulen/img/gallery/9.jpg.webp" alt="">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-        </div>
-        <div class="gallery-itembig">
-            <a href="" class="aft">
-                <img id="gallery10" src="https://preview.colorlib.com/theme/tulen/img/gallery/10.jpg.webp" alt="">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-        </div>
-        <div class="gallery-item">
-            <a href="" class="aft">
-                <img id="gallery11" src="https://preview.colorlib.com/theme/tulen/img/gallery/11.jpg.webp" alt="">
-            </a>
-            <div class="author">
-                <img class="img-icon" src="https://preview.colorlib.com/theme/tulen/img/hero/author.jpg.webp" alt="author">
-                    <h4 class="img-author">Arthur Rose</h4>
-            </div>
-        </div>
-        </div>
-        </div>
+    <section id="blog-icon">
+        <h1 class="blog-advertise">vv Clique abaixo acessar a página do blog vv</h1>
+        <a href="blog-page.html">
+            <svg id="blog-page" viewBox="0 0 640 512"><path d="M381 114.9 186.1 41.8c-16.7-6.2-35.2-5.3-51.1 2.7L89.1 67.4C78 73 77.2 88.5 87.6 95.2l146.9 94.5L136 240l-58.2-25.9c-8.7-3.9-18.8-3.7-27.3.6l-32.2 16.1c-9.3 4.7-11.8 16.8-5 24.7l73.1 85.3c6.1 7.1 15 11.2 24.3 11.2h137.7c5 0 9.9-1.2 14.3-3.4l272.9-136.4c46.5-23.3 82.5-63.3 100.8-112C645.9 75 627.2 48 600.2 48h-57.4c-20.2 0-40.2 4.8-58.2 14zM0 480c0 17.7 14.3 32 32 32h576c17.7 0 32-14.3 32-32s-14.3-32-32-32H32c-17.7 0-32 14.3-32 32"/></svg>
+        </a>
     </section>
     
-    </section>
 </body>
 </html>
