Fixed blog page link not functioning

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a id="active" href="about.html">About</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -130,7 +130,7 @@
                 <!--Photoshop-->
                 <div class="skill-circle">
                     <div class="skill-canvas">
-                        <canvas width="100" height="100"></canvas>
+                        <svg width="125" height="125" viewBox="0 0 200 200"><circle cx="100" cy="100" r="80" fill="none" stroke="#e0e0e0" stroke-width="10"/><circle cx="100" cy="100" r="80" fill="none" stroke="#2916e0" stroke-width="10" stroke-linecap="round" transform="rotate(-90 100 100)" stroke-dasharray="672.65" stroke-dashoffset="251.325"/></svg>
                     </div>
                     <div class="skill-progress">
                         <h2>90%</h2>
@@ -142,7 +142,7 @@
             <div class="skill-item">
                 <div class="skill-circle">
                     <div class="skill-canvas">
-                        <canvas width="100" height="100"></canvas>
+                        <svg width="125" height="125" viewBox="0 0 200 200"><circle cx="100" cy="100" r="80" fill="none" stroke="#e0e0e0" stroke-width="10"/><circle cx="100" cy="100" r="80" fill="none" stroke="#2916e0" stroke-width="10" stroke-linecap="round" transform="rotate(-90 100 100)" stroke-dasharray="710.65" stroke-dashoffset="251.325"/></svg>
                     </div>
                     <div class="skill-progress">
                         <h2>95%</h2>
@@ -154,7 +154,7 @@
             <div class="skill-item">
                 <div class="skill-circle">
                     <div class="skill-canvas">
-                        <canvas width="100" height="100"></canvas>
+                        <svg width="125" height="125" viewBox="0 0 200 200"><circle cx="100" cy="100" r="80" fill="none" stroke="#e0e0e0" stroke-width="10"/><circle cx="100" cy="100" r="80" fill="none" stroke="#2916e0" stroke-width="10" stroke-linecap="round" transform="rotate(-90 100 100)" stroke-dasharray="640.65" stroke-dashoffset="251.325"/></svg>
                     </div>
                     <div class="skill-progress">
                         <h2>80%</h2>
@@ -166,7 +166,7 @@
             <div class="skill-item">
                 <div class="skill-circle">
                     <div class="skill-canvas">
-                        <canvas width="100" height="100"></canvas>
+                        <svg width="125" height="125" viewBox="0 0 200 200"><circle cx="100" cy="100" r="80" fill="none" stroke="#e0e0e0" stroke-width="10"/><circle cx="100" cy="100" r="80" fill="none" stroke="#2916e0" stroke-width="10" stroke-linecap="round" transform="rotate(-90 100 100)" stroke-dasharray="665.65" stroke-dashoffset="251.325"/></svg>
                     </div>
                     <div class="skill-progress">
                         <h2>85%</h2>
